starting with cache implementation - using redis